--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!doctype html>
-<html>
+<html lang="en">
+
 <head>
     <meta charset="utf-8">
     <title>Temporary Home Page</title>
-    </head>
-    <body>
-    <h1>joedawalker.github.io</h1>
+</head>
+
+<body>
+    <header>
+        <h1>joedawalker.github.io</h1>
+        <img alt="The site logo for joedawalker.github.io" src="#">
+    </header>
+    <nav>
+        <p>Navigation is under construction</p>
+    </nav>
+    <main>
         <p>This is a temporary home page served from a GitHub repository.</p>
-    </body>
+    </main>
+    <footer>
+        <p>Site related information here</p>
+    </footer>
+</body>
+
 </html>
