--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
         <p>Navigation is under construction</p>
     </nav>
     <main>
-        <p>This is a temporary home page served from a GitHub repository.</p>
+        <p>My Homework can be found below</p>
+        <ul>
+            <li><a href="/Homework/mobile-review.html" title="Visit My Mobile Review Assignment">Mobile Review Assignment</a></li>
+            <li><a href="/Homework/group-design.html" title="Visit our group's web design analysis">Group Web Design Analysis</a></li>
+        </ul>
     </main>
     <footer>
         <p>Site related information here</p>
