--- a/Homework/group-design.html
+++ b/Homework/group-design.html
@@ -54,7 +54,7 @@
                 Lushusa.com
             </p>
             <p>
-                The design principal of contrast is excellently portraid in this webpage by the seamless and modern looking black content against the white web page. Lush cosmetics products are often very colorful and provide a very vivid contrast in the web page. The contrast also allows for an easier user interface by easily leading the user to where they can learn more or purchase an item. 
+                The design principal of contrast is excellently portrayed in this webpage by the seamless and modern looking black content against the white web page. Lush cosmetics products are often very colorful and provide a very vivid contrast in the web page. The contrast also allows for an easier user interface by easily leading the user to where they can learn more or purchase an item. 
             </p>
 
             <h2>Typography &mdash; Joseph Walker</h2>
