--- a/Homework/group-design.html
+++ b/Homework/group-design.html
@@ -29,7 +29,7 @@
             </p>
 
             <h2>Alignment &mdash; Andrea Wagner</h2>
-            <img src="/images/unsplash.png" alt="Screen shot illustrating alignment in use">
+            <img src="/images/unsplash.PNG" alt="Screen shot illustrating alignment in use">
             <p>
                 Unsplash.com
             </p>
