--- a/homework/index.html
+++ b/homework/index.html
@@ -17,8 +17,9 @@
     <main>
         <p>My Homework can be found below</p>
         <ul>
-            <li><a href="/Homework/mobile-review.html" title="Visit My Mobile Review Assignment">Mobile Review Assignment</a></li>
-            <li><a href="/Homework/group-design.html" title="Visit our group's web design analysis">Group Web Design Analysis</a></li>
+            <li><a href="mobile-review.html" title="Visit My Mobile Review Assignment">Mobile Review Assignment</a></li>
+            <li><a href="group-design.html" title="Visit our group's web design analysis">Group Web Design Analysis</a></li>
+            <li><a href="franklin-weather.html" title="Franklin Weather Page">Franklin Weather Page</a></li>
         </ul>
     </main>
     <footer>
