--- a/homework/franklin-weather.html
+++ b/homework/franklin-weather.html
@@ -15,10 +15,10 @@
     <header>
         <nav>
             <ul class="menu">
-                <li class="menu-item" id="left-nav"><a href="index.html">Home</a></li>
-                <li class="menu-item">Franklin</li>
-                <li class="menu-item">Greenville</li>
-                <li class="menu-item" id="right-nav">Springfield</li>
+                <li class="menu-item" `><a href="../index.html">Home</a></li>
+                <li class="menu-item"><a href="franklin-weather.html">Franklin</a></li>
+                <li class="menu-item"><a href="#">Greenville</a></li>
+                <li class="menu-item"><a href="#">Springfield</a></li>
             </ul>
         </nav>
         <div class="title">
