--- a/homework/franklin-weather.html
+++ b/homework/franklin-weather.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <ul class="menu">
-                <li class="menu-item" `><a href="../index.html">Home</a></li>
+                <li class="menu-item"><a href="../index.html">Home</a></li>
                 <li class="menu-item"><a href="franklin-weather.html">Franklin</a></li>
                 <li class="menu-item"><a href="#">Greenville</a></li>
                 <li class="menu-item"><a href="#">Springfield</a></li>
@@ -35,8 +35,10 @@
                 <h3 id="lo">Lo 66&#8457;</h3>
             </div>
         </section>
-        <section>
-
+        <section class="summary">
+            <h4>Sunny with 0% chance of rain</h4>
+            <h4>Wind: 1-5mph SW</h4>
+            <h4>Longitude: -111.803757 Latitude: 42.011902</h4>
         </section>
     </main>
     <footer></footer>
