--- a/homework/franklin-weather.html
+++ b/homework/franklin-weather.html
@@ -72,6 +72,40 @@
                     <li>11:00pm: 66</li>
                 </ul>
             </div>
+            <div class="hourly-data-ls">
+                <ul class="data-left">
+                    <li>12:00am: 67</li>
+                    <li>1:00am: 67</li>
+                    <li>2:00am: 69</li>
+                    <li>3:00am: 69</li>
+                    <li>4:00am: 69</li>
+                    <li>5:00am: 70</li>
+                </ul>
+                <ul class="data-mid-left">
+                    <li>6:00am: 69</li>
+                    <li>7:00am: 72</li>
+                    <li>8:00am: 74</li>
+                    <li>9:00am: 77</li>
+                    <li>10:00am: 79</li>
+                    <li>11:00am: 81</li>
+                </ul>
+                <ul class="data-mid-right">
+                    <li>12:00pm: 84</li>
+                    <li>1:00pm: 86</li>
+                    <li>2:00pm: 88</li>
+                    <li>3:00pm: 90</li>
+                    <li>4:00pm: 90</li>
+                    <li>5:00pm: 85</li>
+                </ul>
+                <ul class="data-right">
+                    <li>6:00pm: 83</li>
+                    <li>7:00pm: 79</li>
+                    <li>8:00pm: 74</li>
+                    <li>9:00pm: 70</li>
+                    <li>10:00pm: 68</li>
+                    <li>11:00pm: 66</li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer></footer>
