--- a/index.html
+++ b/index.html
@@ -3,27 +3,18 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Joedawalker.github.io</title>
+    <title>Home | joedawalker.github.io</title>
 </head>
 
 <body>
     <header>
-        <h1>jJoedawalker.github.io</h1>
-        <img alt="The site logo for joedawalker.github.io" src="#">
+        <h1>Welcome to joedawalker.github.io</h1>
     </header>
     <nav>
-        <p>Navigation is under construction</p>
     </nav>
     <main>
-        <p>My Homework can be found below</p>
-        <ul>
-            <li><a href="/homework/mobile-review.html" title="Visit My Mobile Review Assignment">Mobile Review Assignment</a></li>
-            <li><a href="/homework/group-design.html" title="Visit our group's web design analysis">Group Web Design Analysis</a></li>
-            <li><a href="/homework/franklin-weather.html" title="Franklin Weather Page">Franklin Weather Page</a></li>
-        </ul>
     </main>
     <footer>
-        <p>Site related information here</p>
     </footer>
 </body>
 
