home page initial submission

--- a/index.html
+++ b/index.html
@@ -2,20 +2,38 @@
 <html lang="en">
 
 <head>
+    <!--The head describes the content of the page to the browser-->
     <meta charset="utf-8">
     <title>Home | joedawalker.github.io</title>
 </head>
 
 <body>
-    <header>
-        <h1>Welcome to joedawalker.github.io</h1>
-    </header>
-    <nav>
-    </nav>
-    <main>
-    </main>
-    <footer>
-    </footer>
+    <!--The body holds all of the content of the page-->
+    <div id="wrapper">
+        <header>
+            <!--Header identifies the site to the site users-->
+            <div id="brand">
+                Welcome to joedawalker.github.io
+            </div>
+        </header>
+        <nav>
+            <!--Allows users to move from page to page within the website-->
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Future Link 1</a></li>
+                <li><a href="#">Future Link 2</a></li>
+                <li><a href="#">Future Link 3</a></li>
+            </ul>
+        </nav>
+        <main>
+            <!--The main content of the webpage-->
+            <h1>Joseph Walker</h1>
+        </main>
+        <footer>
+            <!--The footer provides information related to the website as a whole-->
+            &copy;2017, Joseph Walker
+        </footer>
+    </div>
 </body>
 
 </html>
