--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
         <nav>
             <!--Allows users to move from page to page within the website-->
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Future Link 1</a></li>
-                <li><a href="#">Future Link 2</a></li>
-                <li><a href="#">Future Link 3</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="design-analysis-assessment.html">Design Analysis Assesment</a></li>
             </ul>
         </nav>
         <main>
