weather plan assignment
original submission of weather plan assignment

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="design-analysis-assessment.html">Design Analysis Assesment</a></li>
+                <li><a href="homework/weather-plan.html">Weather Site Plan</a></li>
             </ul>
         </nav>
         <main>
