--- a/homework/weather-plan.html
+++ b/homework/weather-plan.html
@@ -1,5 +1,5 @@
 <!Doctype html>
-<html lang="eng">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -46,7 +46,7 @@
         </section>
         <section>
             <h3>Persona</h3>
-            <img src="img-hw/cool-joe.jpg">
+            <img src="img-hw/cool-joe.jpg" alt="Photo of Joe Cool">
             <ul>
                 <li>
                     <B>Name:</B> Joe Cool</li>
@@ -81,8 +81,8 @@
                 <p>The client provided the following initial concept for a name and logo: <br><b><i>Weather Site</i></b> The name should be bold & italic</p>
                 <figure>
                     <img src="img-hw/logo.jpeg" alt="Site Logo">
+                    <figcaption>This logo can also be rendered using a HTML entity - & #9748;</figcaption>
                 </figure>
-                <figcaption>This logo can also be rendered using a HTML entity - & #9748;</figcaption>
             </section>
             <section>
                 <h4>Typography</h4>
