Franklin Weather Page
Original Submission of the Franklin Weather Page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="design-analysis-assessment.html">Design Analysis Assesment</a></li>
                 <li><a href="homework/weather-plan.html">Weather Site Plan</a></li>
+                <li><a href="weather/franklin.html">Franklin Weather Page</a></li>
             </ul>
         </nav>
         <main>
