weather layout and style
css addition to the franklin weather page for small screens

--- a/homework/weather-plan.html
+++ b/homework/weather-plan.html
@@ -20,6 +20,7 @@
         body {
             font-family: 'Helvetica', sans-serif;
         }
+
     </style>
 </head>
 
@@ -81,7 +82,7 @@
                 <p>The client provided the following initial concept for a name and logo: <br><b><i>Weather Site</i></b> The name should be bold & italic</p>
                 <figure>
                     <img src="img-hw/logo.jpeg" alt="Site Logo">
-                    <figcaption>This logo can also be rendered using a HTML entity - & #9748;</figcaption>
+                    <figcaption>This logo can also be rendered using a HTML entity - &amp;#9748;</figcaption>
                 </figure>
             </section>
             <section>
