--- a/weather/greenville.html
+++ b/weather/greenville.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Franklin, ID | Weather Site | joedawalker.gitub.io </title>
+    <title>Greenville, SC | Weather Site | joedawalker.gitub.io </title>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" type="text/css" href="/css/weather.css">
 
@@ -24,28 +24,28 @@
         </ul>
     </nav>
     <main>
-        <h2>Franklin, ID</h2>
+        <h2>Greenville, ID</h2>
         <div id="box-layout">
             <section class="overview">
                 <h3 id="temp-banner">Current Temp</h3>
                 <p id="temp">86 F</p>
                 <h4 id="sum-banner">Today's High and Low</h4>
                 <ul class="summary">
-                    <li id="sum-img-li"><img src="img-weather/sunny.png" alt="Sunny Image" id="sunny-img"></li>
-                    <li>90 F / 66 F</li>
+                    <li id="sum-img-li"><img src="img-weather/thunderstorm.png" alt="Thunderstorm Icon" id="sunny-img"></li>
+                    <li>84 F / 55 F</li>
                 </ul>
             </section>
             <section class="cur_conditions">
                 <h3>Current Conditions</h3>
                 <ul class="conditions">
                     <li class="label">Wind:</li>
-                    <li>Southwest @ 1-5 MPH</li>
+                    <li>West @ 15-20 MPH</li>
                     <li class="label">Precipitation:</li>
-                    <li>0%</li>
+                    <li>70%</li>
                 </ul>
                 <figure>
-                    <img src="img-weather/sunny.png" alt="sunny" id="cur-cond-img">
-                    <figcaption>Sunny</figcaption>
+                    <img src="img-weather/thunderstorm.png" alt="Thunderstorm Icon" id="cur-cond-img">
+                    <figcaption>Afternoon Thunderstorms</figcaption>
                 </figure>
             </section>
             <section class="hr-temp">
@@ -78,30 +78,30 @@
                         <li>11pm</li>
                     </ul>
                     <ul>
+                        <li>55F</li>
+                        <li>56F</li>
+                        <li>56F</li>
+                        <li>56F</li>
+                        <li>57F</li>
+                        <li>57F</li>
+                        <li>58F</li>
+                        <li>62F</li>
+                        <li>63F</li>
                         <li>67F</li>
-                        <li>67F</li>
-                        <li>69F</li>
-                        <li>69F</li>
-                        <li>69F</li>
                         <li>70F</li>
-                        <li>69F</li>
-                        <li>72F</li>
-                        <li>74F</li>
+                        <li>73F</li>
                         <li>77F</li>
-                        <li>79F</li>
-                        <li>81F</li>
+                        <li>80F</li>
                         <li>84F</li>
-                        <li>86F</li>
-                        <li>88F</li>
-                        <li>90F</li>
-                        <li>90F</li>
-                        <li>85F</li>
                         <li>83F</li>
+                        <li>83F</li>
+                        <li>80F</li>
                         <li>79F</li>
                         <li>74F</li>
                         <li>70F</li>
                         <li>68F</li>
-                        <li>66F</li>
+                        <li>60F</li>
+                        <li>58F</li>
                     </ul>
                 </div>
             </section>
