--- a/weather/greenville.html
+++ b/weather/greenville.html
@@ -16,19 +16,19 @@
     </header>
     <nav>
         <ul class="menu">
-            <li><a href="/index.html" title="Home">Home</a></li>
-            <li><a href="franklin.html" title="Franklin">Franklin</a></li>
-            <li><a href="greenville.html" title="Greenville">Greenville</a></li>
-            <li><a href="#" title="Springfield">Springfield</a></li>
-            <li><a href="#" title="Search">Search</a></li>
+            <li><a href="/index.html" title="Weather Site home page">Home</a></li>
+            <li><a href="franklin.html" title="Franklin Idaho Weather">Franklin</a></li>
+            <li><a href="Greenville.html" title="Greenville South Carolina Weather">Greenville</a></li>
+            <li><a href="#" title="Springfield Illinois Weather">Springfield</a></li>
+            <li><a href="#" title="Search locations for their weather forecast">Search</a></li>
         </ul>
     </nav>
     <main>
-        <h2>Greenville, ID</h2>
+        <h2>Greenville, SC</h2>
         <div id="box-layout">
             <section class="overview">
                 <h3 id="temp-banner">Current Temp</h3>
-                <p id="temp">86 F</p>
+                <p id="temp">77 F</p>
                 <h4 id="sum-banner">Today's High and Low</h4>
                 <ul class="summary">
                     <li id="sum-img-li"><img src="img-weather/thunderstorm.png" alt="Thunderstorm Icon" id="sunny-img"></li>
