--- a/weather/franklin.html
+++ b/weather/franklin.html
@@ -16,11 +16,11 @@
     </header>
     <nav>
         <ul class="menu">
-            <li><a href="/index.html" title="Home">Home</a></li>
-            <li><a href="franklin.html" title="Franklin">Franklin</a></li>
-            <li><a href="greenville.html" title="Greenville">Greenville</a></li>
-            <li><a href="#" title="Springfield">Springfield</a></li>
-            <li><a href="#" title="Search">Search</a></li>
+            <li><a href="/index.html" title="Weather Site home page">Home</a></li>
+            <li><a href="franklin.html" title="Franklin Idaho Weather">Franklin</a></li>
+            <li><a href="Greenville.html" title="Greenville South Carolina Weather">Greenville</a></li>
+            <li><a href="#" title="Springfield Illinois Weather">Springfield</a></li>
+            <li><a href="#" title="Search locations for their weather forecast">Search</a></li>
         </ul>
     </nav>
     <main>
@@ -31,7 +31,7 @@
                 <p id="temp">86 F</p>
                 <h4 id="sum-banner">Today's High and Low</h4>
                 <ul class="summary">
-                    <li id="sum-img-li"><img src="img-weather/sunny.png" alt="Sunny Image" id="sunny-img"></li>
+                    <li id="sum-img-li"><img src="img-weather/sunny.png" alt="Icon of the Sun" id="sunny-img"></li>
                     <li>90 F / 66 F</li>
                 </ul>
             </section>
@@ -44,7 +44,7 @@
                     <li>0%</li>
                 </ul>
                 <figure>
-                    <img src="img-weather/sunny.png" alt="sunny" id="cur-cond-img">
+                    <img src="img-weather/sunny.png" alt="Icon of the Sun" id="cur-cond-img">
                     <figcaption>Sunny</figcaption>
                 </figure>
             </section>
