--- a/weather/greenville.html
+++ b/weather/greenville.html
@@ -18,7 +18,7 @@
         <ul class="menu">
             <li><a href="/index.html" title="Weather Site home page">Home</a></li>
             <li><a href="franklin.html" title="Franklin Idaho Weather">Franklin</a></li>
-            <li><a href="Greenville.html" title="Greenville South Carolina Weather">Greenville</a></li>
+            <li><a href="greenville.html" title="Greenville South Carolina Weather">Greenville</a></li>
             <li><a href="#" title="Springfield Illinois Weather">Springfield</a></li>
             <li><a href="#" title="Search locations for their weather forecast">Search</a></li>
         </ul>
