responsive media link added

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li><a href="design-analysis-assessment.html">Design Analysis Assesment</a></li>
                 <li><a href="homework/weather-plan.html">Weather Site Plan</a></li>
                 <li><a href="weather/franklin.html">Franklin Weather Page</a></li>
+                <li><a href="responsive_media/index.html">Responsive Media</a></li>
             </ul>
         </nav>
         <main>
