intro to jQuery added
Completed lesson files added to repository. Link added to homepage for
lesson 4 pages

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <li><a href="homework/weather-plan.html">Weather Site Plan</a></li>
                 <li><a href="weather/franklin.html">Franklin Weather Page</a></li>
                 <li><a href="responsive_media/index.html">Responsive Media</a></li>
+                <li><a href="intro-jquery-files/Lesson4/index.htm">jQuery: Assessment</a></li>
             </ul>
         </nav>
         <main>
