--- a/intro-jquery-files/Lesson4/toggleButtonBegin.htm
+++ b/intro-jquery-files/Lesson4/toggleButtonBegin.htm
@@ -2,28 +2,31 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<title>ToggleButton</title>
-	<link rel="stylesheet" href="css/toggleBtn.css">
-	<script src="js/jquery-3.0.0.min.js"></script>
-	<script>
-		$(function () {
-			// jQuery Code goes here
-			$('.toggleBtn').click(function() {
-               $(this).toggleClass("toggleOn");
+    <meta charset="UTF-8">
+    <title>ToggleButton</title>
+    <link rel="stylesheet" href="css/toggleBtn.css">
+    <!--<script src="js/jquery-3.0.0.min.js"></script>-->
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script>
+        $(function() {
+            // jQuery Code goes here
+            $('.toggleBtn').click(function() {
+                $(this).toggleClass("toggleOn");
             });
 
-		})
-	</script>
+        })
+
+    </script>
 </head>
 
 <body>
-	<div class="container">
-		<a href="#" class="toggleBtn">Navigation</a>
-		<a href="#" class="toggleBtn">Fuel Monitor</a>
-		<a href="#" class="toggleBtn">Battery Monitor</a>
-	</div>
+    <div class="container">
+        <a href="#" class="toggleBtn">Navigation</a>
+        <a href="#" class="toggleBtn">Fuel Monitor</a>
+        <a href="#" class="toggleBtn">Battery Monitor</a>
+    </div>
 
 </body>
 <footer><a href="index.htm" class="toggleBtn">Return to Home</a></footer>
+
 </html>
