current-conditions assignment part 2
Second part of assignment completed. Weather site home page added with
data supplied from Weather Underground API.

--- a/jsonweather-html/index.html
+++ b/jsonweather-html/index.html
@@ -11,8 +11,8 @@
 <!-- *********************************************
 * Who Did You Collaborate With On This Assessment?
 * 1. Joseph Walker
-* 2. Will
-* 3. Alex
+* 2. Will Orchard
+* 3. Alex Matheson
 * 4.
 * 5.
 * ******************************************** -->
