--- a/weather/greenville.html
+++ b/weather/greenville.html
@@ -16,7 +16,7 @@
     </header>
     <nav>
         <ul class="menu">
-            <li><a href="/index.html" title="Weather Site home page">Home</a></li>
+            <li><a href="index.html" title="Weather Site home page">Home</a></li>
             <li><a href="franklin.html" title="Franklin Idaho Weather">Franklin</a></li>
             <li><a href="greenville.html" title="Greenville South Carolina Weather">Greenville</a></li>
             <li><a href="#" title="Springfield Illinois Weather">Springfield</a></li>
@@ -31,7 +31,7 @@
                 <p id="temp">77 F</p>
                 <h4 id="sum-banner">Today's High and Low</h4>
                 <ul class="summary">
-                    <li id="sum-img-li"><img src="img-weather/thunderstorm.png" alt="Thunderstorm Icon" id="sunny-img"></li>
+                    <li id="sum-img-li"><img src="img-weather/thunderstorm.png" alt="Thunderstorm Icon" id="sum-img"></li>
                     <li>84 F / 55 F</li>
                 </ul>
             </section>
@@ -44,7 +44,7 @@
                     <li>70%</li>
                 </ul>
                 <figure>
-                    <img src="img-weather/thunderstorm.png" alt="Thunderstorm Icon" id="cur-cond-img">
+                    <img src="img-weather/thunderstorm.png" alt="Thunderstorm Icon" id="cur-sum-img">
                     <figcaption>Afternoon Thunderstorms</figcaption>
                 </figure>
             </section>
