--- a/jsonweather-html/index.html
+++ b/jsonweather-html/index.html
@@ -39,7 +39,7 @@
         </main>
         <footer id="page-footer">
             <div id="footer-content"></div>
-            <small>Last updated: </small>
+            <small>Last updated: 11/21/2017</small>
         </footer>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script src="scripts/modules.js"></script>
