Search Assessment Complete
Full submission of search assignments with links updated on homepage

--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="design-analysis-assessment.html">Design Analysis Assesment</a></li>
                 <li><a href="homework/weather-plan.html">Weather Site Plan</a></li>
-                <li><a href="weather/index.html">Weather Site</a></li>
                 <li><a href="responsive_media/index.html">Responsive Media</a></li>
                 <li><a href="intro-jquery-files/lesson-4/index.htm">jQuery: Assessment</a></li>
                 <li><a href="jsonweather-html/index.html">Current Location Assessment</a></li>
+                <li><a href="weather/index.html">Weather Site</a></li>
+                <li><a href="menu-activity/index.html">Menu Activity</a></li>
+                <li><a href="search/search.html">Search Activity</a></li>
+
             </ul>
         </nav>
         <main>
