--- a/search/search.html
+++ b/search/search.html
@@ -4,6 +4,7 @@
 <head>
     <!--The head describes the content of the page to the browser-->
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="search.css" media="screen">
     <title>Search | joedawalker.github.io</title>
 </head>
 <body>
