--- a/weather/franklin.html
+++ b/weather/franklin.html
@@ -20,7 +20,7 @@
             <li><a href="franklin.html" title="Franklin Idaho Weather">Franklin</a></li>
             <li><a href="greenville.html" title="Greenville South Carolina Weather">Greenville</a></li>
             <li><a href="#" title="Springfield Illinois Weather">Springfield</a></li>
-            <li><a href="#" title="Search locations for their weather forecast">Search</a></li>
+            <li><a href="search.html" title="Search locations for their weather forecast">Search</a></li>
         </ul>
     </nav>
     <main>
