--- a/weather/search.html
+++ b/weather/search.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Search | Weather Site | joedawalker.gitub.io </title>
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" type="text/css" href="/css/weather.css">
+    <link rel="stylesheet" type="text/css" href="/css/weather.css" media="screen">
 </head>
 <!-- *********************************************
 * Who Did You Collaborate With On This Assessment?
