Home Page update
Updated Links in assignments list

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 <li><a href="weather/index.html">Weather Site</a></li>
                 <li><a href="menu-activity/index.html">Menu Activity</a></li>
                 <li><a href="search/search.html">Search Activity</a></li>
+                <li><a href="acme/template.html">ACME Template</a></li>
+                <li><a href="acme/index.html">ACME Website</a></li>
+
 
             </ul>
         </nav>
