--- a/acme/index.html
+++ b/acme/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Home | ACME | joedawalker.gitub.io </title>
@@ -70,16 +70,20 @@
                     </div>
                     <ul id="item-info">
                         <li id="description"></li>
-                        <div id="side-align">
-                            <li class="bold">Made By:</li>
-                            <li id="manufacturer"></li>
-                            <li class="bold">Reviews:</li>
-                            <li id="item-reviews"></li>
-                        </div>
-                        <div id="price-align">
-                            <li class="price">Price:</li>
-                            <li class="price" id="price"></li>
-                        </div>
+                        <li>
+                            <ul id="side-align">
+                                <li class="bold">Made By:</li>
+                                <li id="manufacturer"></li>
+                                <li class="bold">Reviews:</li>
+                                <li id="item-reviews"></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <ul id="price-align">
+                                <li class="price">Price:</li>
+                                <li class="price" id="price"></li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
             </section>
