--- a/acme/template.html
+++ b/acme/template.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Template | ACME | joedawalker.gitub.io </title>
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+<div id="page-display">
 <header>
     <img src="images/site/logo.png" alt="ACME site logo, ACME Buy Here. Eat Roadrunner" id="logo">
 </header>
@@ -22,6 +23,7 @@
     <p>&copy;2017 ACME Inc., All Rights Reserved.</p>
     <p>All images used are believed to be in "Fair Use". Please notify the author if any are not and they will be removed.</p>
 </footer>
+</div>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 <script src="/acme/js/acme.js"></script>
 </body>
