--- a/acme/index.html
+++ b/acme/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Home | ACME | joedawalker.gitub.io </title>
@@ -64,7 +65,7 @@
                 </div>
             </section>
             <section id="products">
-                <h1 id="item-name"></h1>
+                <h1 id="item-name">Product Name</h1>
                 <div id="item-display">
                     <div id="item-image">
                     </div>
@@ -97,4 +98,5 @@
         <script src="/acme/js/acme.js"></script>
     </div>
 </body>
+
 </html>
