--- a/acme/index.html
+++ b/acme/index.html
@@ -65,6 +65,7 @@
                 </div>
             </section>
             <section id="products">
+                <noscript>JavaScript is currently disabled. JavaScript must be enabled to use this site.</noscript>
                 <h1 id="item-name">Product Name</h1>
                 <div id="item-display">
                     <div id="item-image">
